[gd_scene load_steps=3 format=3 uid="uid://cnb0y1jgt34mr"]

[ext_resource type="Script" path="res://common_scenes/sm_items_list/sm_items_list_item.gd" id="1_jxvhl"]
[ext_resource type="PackedScene" uid="uid://dr4d8tks7feyv" path="res://common_scenes/slot_display_item/slot_display_item.tscn" id="2_58vm1"]

[node name="SMItemsListItem" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jxvhl")

[node name="SlotDisplayItem" parent="." instance=ExtResource("2_58vm1")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
